Make sure to update view positions if we move our block around verticallyduring reflow.  Bug 365294, r+sr=dbaron